--- a/wikimeaty.html
+++ b/wikimeaty.html
@@ -691,7 +691,7 @@
         });
     </script>
 
-    <!-- Google Analytics - TODO: Replace G-0M939THZZ5 with your measurement ID -->
+    <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-0M939THZZ5"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
