--- a/index.html
+++ b/index.html
@@ -1,10 +1,348 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="robots" content="noindex,nofollow" />
-    <title>farifari</title>
-  </head>
-  <body></body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Name | Startup Builder</title>
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      min-height: 100vh;
+      background: linear-gradient(180deg, #fafafa 0%, #f0f0f0 100%);
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+      padding: 40px 20px;
+    }
+
+    .container {
+      max-width: 480px;
+      margin: 0 auto;
+    }
+
+    /* Animations */
+    @keyframes fadeUp {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    .animate {
+      opacity: 0;
+      animation: fadeUp 0.5s ease forwards;
+    }
+
+    .delay-1 { animation-delay: 0.1s; }
+    .delay-2 { animation-delay: 0.2s; }
+    .delay-3 { animation-delay: 0.3s; }
+    .delay-4 { animation-delay: 0.4s; }
+    .delay-5 { animation-delay: 0.5s; }
+
+    /* Profile Section */
+    .profile {
+      text-align: center;
+      margin-bottom: 32px;
+    }
+
+    .profile-image {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      margin: 0 auto 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 4px 20px rgba(102, 126, 234, 0.3);
+      border: 4px solid #fff;
+      font-size: 48px;
+      overflow: hidden;
+    }
+
+    .profile-image img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .profile h1 {
+      font-size: 28px;
+      font-weight: 700;
+      color: #1a1a1a;
+      margin-bottom: 8px;
+    }
+
+    .profile .bio {
+      font-size: 16px;
+      color: #666;
+      margin-bottom: 16px;
+      line-height: 1.5;
+    }
+
+    .status-badge {
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+      padding: 8px 16px;
+      background-color: #e8f5e9;
+      border-radius: 20px;
+      font-size: 14px;
+      color: #2e7d32;
+    }
+
+    .status-dot {
+      width: 8px;
+      height: 8px;
+      background-color: #4caf50;
+      border-radius: 50%;
+    }
+
+    /* Interests */
+    .interests {
+      display: flex;
+      justify-content: center;
+      gap: 8px;
+      flex-wrap: wrap;
+      margin-bottom: 32px;
+    }
+
+    .interest-chip {
+      font-size: 13px;
+      padding: 8px 14px;
+      background-color: #fff;
+      border: 1px solid #e0e0e0;
+      border-radius: 20px;
+      color: #555;
+      cursor: pointer;
+      transition: all 0.2s ease;
+    }
+
+    .interest-chip:hover {
+      background: #000;
+      color: #fff;
+    }
+
+    /* Section Labels */
+    .section-label {
+      font-size: 13px;
+      color: #999;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+      margin-bottom: 12px;
+      text-align: center;
+    }
+
+    /* Cards */
+    .card {
+      display: flex;
+      align-items: center;
+      padding: 16px 20px;
+      background-color: #fff;
+      border-radius: 16px;
+      text-decoration: none;
+      color: #1a1a1a;
+      box-shadow: 0 2px 12px rgba(0,0,0,0.06);
+      transition: all 0.2s ease;
+      border: 1px solid #f0f0f0;
+      margin-bottom: 12px;
+    }
+
+    .card:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 8px 30px rgba(0,0,0,0.12);
+    }
+
+    .card-emoji {
+      font-size: 28px;
+      margin-right: 16px;
+    }
+
+    .card-content {
+      flex: 1;
+    }
+
+    .card-title {
+      font-size: 16px;
+      font-weight: 600;
+      margin-bottom: 2px;
+    }
+
+    .card-subtitle {
+      font-size: 13px;
+      color: #888;
+    }
+
+    .card-arrow {
+      font-size: 18px;
+      color: #ccc;
+      transition: transform 0.2s ease;
+    }
+
+    .card:hover .card-arrow {
+      transform: translateX(4px);
+    }
+
+    /* Social Links */
+    .social-card {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+      padding: 14px 20px;
+      background-color: #fff;
+      border-radius: 12px;
+      text-decoration: none;
+      color: #1a1a1a;
+      font-size: 15px;
+      font-weight: 500;
+      box-shadow: 0 2px 12px rgba(0,0,0,0.06);
+      transition: all 0.2s ease;
+      border: 1px solid #f0f0f0;
+      margin-bottom: 10px;
+    }
+
+    .social-card:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 8px 30px rgba(0,0,0,0.12);
+    }
+
+    .social-icon {
+      font-size: 16px;
+    }
+
+    /* About Section */
+    .about-box {
+      background-color: #fff;
+      border-radius: 20px;
+      padding: 24px;
+      margin-bottom: 32px;
+      box-shadow: 0 2px 12px rgba(0,0,0,0.06);
+      border: 1px solid #f0f0f0;
+    }
+
+    .about-box .section-label {
+      text-align: left;
+    }
+
+    .about-box p {
+      font-size: 15px;
+      color: #444;
+      line-height: 1.7;
+    }
+
+    /* Footer */
+    .footer {
+      text-align: center;
+      font-size: 13px;
+      color: #bbb;
+    }
+
+    /* Sections spacing */
+    .section {
+      margin-bottom: 24px;
+    }
+
+    .section.socials {
+      margin-bottom: 40px;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="container">
+
+    <!-- Profile Section -->
+    <div class="profile animate">
+      <div class="profile-image">
+        <!-- Replace with: <img src="your-photo.jpg" alt="Your Name"> -->
+        👤
+      </div>
+      <h1>Your Name</h1>
+      <p class="bio">
+        Startup Builder 🛠️<br>
+        Build fast, launch, repeat.
+      </p>
+      <div class="status-badge">
+        <span class="status-dot"></span>
+        Building in public
+      </div>
+    </div>
+
+    <!-- Interests -->
+    <div class="interests animate delay-1">
+      <span class="interest-chip">AI/ML</span>
+      <span class="interest-chip">SaaS</span>
+      <span class="interest-chip">Dev Tools</span>
+      <span class="interest-chip">Productivity</span>
+      <span class="interest-chip">Automation</span>
+    </div>
+
+    <!-- Projects -->
+    <div class="section animate delay-2">
+      <p class="section-label">My Projects</p>
+      
+      <a href="#" class="card">
+        <span class="card-emoji">🥩</span>
+        <div class="card-content">
+          <div class="card-title">Wiki Meaty</div>
+          <div class="card-subtitle">Launching Soon</div>
+        </div>
+        <span class="card-arrow">→</span>
+      </a>
+
+      <a href="#" class="card">
+        <span class="card-emoji">🚀</span>
+        <div class="card-content">
+          <div class="card-title">Next Project</div>
+          <div class="card-subtitle">Coming Soon</div>
+        </div>
+        <span class="card-arrow">→</span>
+      </a>
+    </div>
+
+    <!-- Social Links -->
+    <div class="section socials animate delay-3">
+      <p class="section-label">Follow Me</p>
+      
+      <a href="#" class="social-card">
+        <span class="social-icon">𝕏</span>
+        Twitter / X
+      </a>
+
+      <a href="#" class="social-card">
+        <span class="social-icon">◊</span>
+        GitHub
+      </a>
+
+      <a href="#" class="social-card">
+        <span class="social-icon">in</span>
+        LinkedIn
+      </a>
+
+      <a href="#" class="social-card">
+        <span class="social-icon">✉</span>
+        Email me
+      </a>
+    </div>
+
+    <!-- About Section -->
+    <div class="about-box animate delay-4">
+      <p class="section-label">About Me</p>
+      <p>
+        I'm a startup builder focused on shipping products quickly and learning from real users. 
+        My approach is simple: build an MVP, launch it, gather feedback, and iterate. 
+        Currently working on <strong>Wiki Meaty</strong> and always exploring new ideas.
+      </p>
+    </div>
+
+    <!-- Footer -->
+    <div class="footer animate delay-5">
+      Open to collaborations ✨
+    </div>
+
+  </div>
+
+</body>
 </html>
