--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       min-height: 100vh;
       background: linear-gradient(180deg, #fafafa 0%, #f0f0f0 100%);
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-      padding: 40px 20px;
+      padding: 60px 30px;
     }
 
     .container {
-      max-width: 480px;
+      max-width: 600px;
       margin: 0 auto;
     }
 
@@ -43,21 +43,21 @@
     /* Profile Section */
     .profile {
       text-align: center;
-      margin-bottom: 32px;
+      margin-bottom: 40px;
     }
 
     .profile-image {
-      width: 120px;
-      height: 120px;
+      width: 160px;
+      height: 160px;
       border-radius: 50%;
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      margin: 0 auto 20px;
+      margin: 0 auto 24px;
       display: flex;
       align-items: center;
       justify-content: center;
       box-shadow: 0 4px 20px rgba(102, 126, 234, 0.3);
-      border: 4px solid #fff;
-      font-size: 48px;
+      border: 5px solid #fff;
+      font-size: 64px;
       overflow: hidden;
     }
 
@@ -68,33 +68,33 @@
     }
 
     .profile h1 {
-      font-size: 28px;
+      font-size: 36px;
       font-weight: 700;
       color: #1a1a1a;
-      margin-bottom: 8px;
+      margin-bottom: 12px;
     }
 
     .profile .bio {
-      font-size: 16px;
+      font-size: 20px;
       color: #666;
-      margin-bottom: 16px;
+      margin-bottom: 20px;
       line-height: 1.5;
     }
 
     .status-badge {
       display: inline-flex;
       align-items: center;
-      gap: 6px;
-      padding: 8px 16px;
+      gap: 8px;
+      padding: 12px 24px;
       background-color: #e8f5e9;
-      border-radius: 20px;
-      font-size: 14px;
+      border-radius: 24px;
+      font-size: 16px;
       color: #2e7d32;
     }
 
     .status-dot {
-      width: 8px;
-      height: 8px;
+      width: 10px;
+      height: 10px;
       background-color: #4caf50;
       border-radius: 50%;
     }
@@ -103,17 +103,17 @@
     .interests {
       display: flex;
       justify-content: center;
-      gap: 8px;
+      gap: 12px;
       flex-wrap: wrap;
-      margin-bottom: 32px;
+      margin-bottom: 40px;
     }
 
     .interest-chip {
-      font-size: 13px;
-      padding: 8px 14px;
+      font-size: 16px;
+      padding: 12px 20px;
       background-color: #fff;
       border: 1px solid #e0e0e0;
-      border-radius: 20px;
+      border-radius: 24px;
       color: #555;
       cursor: pointer;
       transition: all 0.2s ease;
@@ -126,11 +126,11 @@
 
     /* Section Labels */
     .section-label {
-      font-size: 13px;
+      font-size: 15px;
       color: #999;
       text-transform: uppercase;
       letter-spacing: 0.5px;
-      margin-bottom: 12px;
+      margin-bottom: 16px;
       text-align: center;
     }
 
@@ -138,15 +138,15 @@
     .card {
       display: flex;
       align-items: center;
-      padding: 16px 20px;
+      padding: 20px 28px;
       background-color: #fff;
-      border-radius: 16px;
+      border-radius: 20px;
       text-decoration: none;
       color: #1a1a1a;
       box-shadow: 0 2px 12px rgba(0,0,0,0.06);
       transition: all 0.2s ease;
       border: 1px solid #f0f0f0;
-      margin-bottom: 12px;
+      margin-bottom: 16px;
     }
 
     .card:hover {
@@ -155,8 +155,8 @@
     }
 
     .card-emoji {
-      font-size: 28px;
-      margin-right: 16px;
+      font-size: 36px;
+      margin-right: 20px;
     }
 
     .card-content {
@@ -164,18 +164,18 @@
     }
 
     .card-title {
-      font-size: 16px;
+      font-size: 20px;
       font-weight: 600;
-      margin-bottom: 2px;
+      margin-bottom: 4px;
     }
 
     .card-subtitle {
-      font-size: 13px;
+      font-size: 15px;
       color: #888;
     }
 
     .card-arrow {
-      font-size: 18px;
+      font-size: 24px;
       color: #ccc;
       transition: transform 0.2s ease;
     }
@@ -189,18 +189,18 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 10px;
-      padding: 14px 20px;
+      gap: 12px;
+      padding: 18px 28px;
       background-color: #fff;
-      border-radius: 12px;
+      border-radius: 16px;
       text-decoration: none;
       color: #1a1a1a;
-      font-size: 15px;
+      font-size: 18px;
       font-weight: 500;
       box-shadow: 0 2px 12px rgba(0,0,0,0.06);
       transition: all 0.2s ease;
       border: 1px solid #f0f0f0;
-      margin-bottom: 10px;
+      margin-bottom: 14px;
     }
 
     .social-card:hover {
@@ -209,15 +209,15 @@
     }
 
     .social-icon {
-      font-size: 16px;
+      font-size: 22px;
     }
 
     /* About Section */
     .about-box {
       background-color: #fff;
-      border-radius: 20px;
-      padding: 24px;
-      margin-bottom: 32px;
+      border-radius: 24px;
+      padding: 32px;
+      margin-bottom: 40px;
       box-shadow: 0 2px 12px rgba(0,0,0,0.06);
       border: 1px solid #f0f0f0;
     }
@@ -227,7 +227,7 @@
     }
 
     .about-box p {
-      font-size: 15px;
+      font-size: 18px;
       color: #444;
       line-height: 1.7;
     }
@@ -235,17 +235,17 @@
     /* Footer */
     .footer {
       text-align: center;
-      font-size: 13px;
+      font-size: 16px;
       color: #bbb;
     }
 
     /* Sections spacing */
     .section {
-      margin-bottom: 24px;
+      margin-bottom: 32px;
     }
 
     .section.socials {
-      margin-bottom: 40px;
+      margin-bottom: 48px;
     }
   </style>
 </head>
@@ -256,13 +256,11 @@
     <!-- Profile Section -->
     <div class="profile animate">
       <div class="profile-image">
-        <!-- Replace with: <img src="your-photo.jpg" alt="Your Name"> -->
-        👤
+        <img src="ProfilePicture.jpeg" alt="farifari">
       </div>
-      <h1>Your Name</h1>
+      <h1>farifari</h1>
       <p class="bio">
-        Startup Builder 🛠️<br>
-        Build fast, launch, repeat.
+        Think. Build. Ship. 🚀
       </p>
       <div class="status-badge">
         <span class="status-dot"></span>
@@ -270,20 +268,11 @@
       </div>
     </div>
 
-    <!-- Interests -->
-    <div class="interests animate delay-1">
-      <span class="interest-chip">AI/ML</span>
-      <span class="interest-chip">SaaS</span>
-      <span class="interest-chip">Dev Tools</span>
-      <span class="interest-chip">Productivity</span>
-      <span class="interest-chip">Automation</span>
-    </div>
-
     <!-- Projects -->
     <div class="section animate delay-2">
       <p class="section-label">My Projects</p>
       
-      <a href="#" class="card">
+      <a href="https://farifari.com/wikimeaty/" class="card">
         <span class="card-emoji">🥩</span>
         <div class="card-content">
           <div class="card-title">Wiki Meaty</div>
@@ -292,37 +281,50 @@
         <span class="card-arrow">→</span>
       </a>
 
-      <a href="#" class="card">
+      <div class="card">
         <span class="card-emoji">🚀</span>
         <div class="card-content">
           <div class="card-title">Next Project</div>
           <div class="card-subtitle">Coming Soon</div>
         </div>
-        <span class="card-arrow">→</span>
-      </a>
+      </div>
     </div>
 
     <!-- Social Links -->
     <div class="section socials animate delay-3">
       <p class="section-label">Follow Me</p>
       
-      <a href="#" class="social-card">
-        <span class="social-icon">𝕏</span>
+      <a href="https://x.com/LFaria001" class="social-card">
+        <span class="social-icon" style="color: #000; font-weight: 800;">𝕏</span>
         Twitter / X
       </a>
 
-      <a href="#" class="social-card">
-        <span class="social-icon">◊</span>
-        GitHub
-      </a>
-
-      <a href="#" class="social-card">
-        <span class="social-icon">in</span>
+      <a href="https://www.linkedin.com/in/lmvfaria/" class="social-card">
+        <span class="social-icon" style="color: #0A66C2; font-weight: 700;">in</span>
         LinkedIn
       </a>
 
-      <a href="#" class="social-card">
-        <span class="social-icon">✉</span>
+      <a href="https://www.instagram.com/lfaria001/" class="social-card">
+        <span class="social-icon" style="display: flex; align-items: center;">
+          <svg viewBox="0 0 24 24" width="22" height="22">
+            <defs>
+              <linearGradient id="ig-grad" x1="0%" y1="100%" x2="100%" y2="0%">
+                <stop offset="0%" stop-color="#FFDC80"/>
+                <stop offset="25%" stop-color="#FCAF45"/>
+                <stop offset="50%" stop-color="#F77737"/>
+                <stop offset="75%" stop-color="#F56040"/>
+                <stop offset="90%" stop-color="#E1306C"/>
+                <stop offset="100%" stop-color="#833AB4"/>
+              </linearGradient>
+            </defs>
+            <path fill="url(#ig-grad)" d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
+          </svg>
+        </span>
+        Instagram
+      </a>
+
+      <a href="mailto:LMVFaria001@gmail.com" class="social-card">
+        <span class="social-icon" style="color: #EA4335;">✉</span>
         Email me
       </a>
     </div>
@@ -331,16 +333,10 @@
     <div class="about-box animate delay-4">
       <p class="section-label">About Me</p>
       <p>
-        I'm a startup builder focused on shipping products quickly and learning from real users. 
-        My approach is simple: build an MVP, launch it, gather feedback, and iterate. 
-        Currently working on <strong>Wiki Meaty</strong> and always exploring new ideas.
+        I think of problems, build things and ship them. I'm currently working on <a href="https://farifari.com/wikimeaty/"><strong>Wiki Meaty 🥩</strong></a> and growing my audience online, so follow along.
       </p>
     </div>
 
-    <!-- Footer -->
-    <div class="footer animate delay-5">
-      Open to collaborations ✨
-    </div>
 
   </div>
 
