--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     }
 
     .profile-image {
-      width: 160px;
-      height: 160px;
+      width: 200px;
+      height: 200px;
       border-radius: 50%;
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       margin: 0 auto 24px;
@@ -65,6 +65,9 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      image-rendering: auto;
+      image-rendering: high-quality;
+      -ms-interpolation-mode: bicubic;
     }
 
     .profile h1 {
@@ -336,7 +339,6 @@
         I think of problems, build things and ship them. I'm currently working on <a href="https://farifari.com/wikimeaty/"><strong>Wiki Meaty 🥩</strong></a> and growing my audience online, so follow along.
       </p>
     </div>
-
 
   </div>
 
