--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>farifari | Think. Build. Ship. 🚀</title>
+  <title>farifari | Think. Build. Ship.</title>
   <meta name="description" content="I think of problems, build things and ship them. Follow along as I build in public.">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="farifari | Think. Build. Ship. 🚀">
+  <meta property="og:title" content="farifari | Think. Build. Ship.">
   <meta property="og:description" content="I think of problems, build things and ship them. Follow along as I build in public.">
   <meta property="og:image" content="https://farifari.com/ProfilePicture.jpeg">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="farifari | Think. Build. Ship. 🚀">
+  <meta name="twitter:title" content="farifari | Think. Build. Ship.">
   <meta name="twitter:description" content="I think of problems, build things and ship them. Follow along as I build in public.">
   <meta name="twitter:image" content="https://farifari.com/ProfilePicture.jpeg">
 
