--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="twitter:image" content="https://farifari.com/ProfilePicture.jpeg">
 
   <!-- Favicon -->
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🚀</text></svg>">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📌</text></svg>">
 
   <style>
     * {
@@ -265,7 +265,7 @@
       </div>
       <h1>farifari</h1>
       <p class="bio">
-        Think. Build. Ship. 🚀
+        Think. Build. Ship.
       </p>
       <div class="status-badge">
         <span class="status-dot"></span>
