--- a/wikimeaty/privacy.html
+++ b/wikimeaty/privacy.html
@@ -119,12 +119,12 @@
     </style>
 
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0M939THZZ5"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FX9X56QC6B"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'G-0M939THZZ5');
+        gtag('config', 'G-FX9X56QC6B');
     </script>
 </head>
 <body>
