--- a/index.html
+++ b/index.html
@@ -344,13 +344,13 @@
 
   </div>
 
-  <!-- Google Analytics - Replace G-XXXXXXXXXX with your measurement ID -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <!-- Google Analytics - Replace G-FX9X56QC6B with your measurement ID -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FX9X56QC6B"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-XXXXXXXXXX');
+    gtag('config', 'G-FX9X56QC6B');
   </script>
 
 </body>
