--- a/wikimeaty/index.html
+++ b/wikimeaty/index.html
@@ -692,13 +692,13 @@
         });
     </script>
 
-    <!-- Google Analytics - TODO: Replace G-XXXXXXXXXX with your measurement ID -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <!-- Google Analytics - TODO: Replace G-FX9X56QC6B with your measurement ID -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FX9X56QC6B"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'G-XXXXXXXXXX');
+        gtag('config', 'G-FX9X56QC6B');
     </script>
 </body>
 </html>
