--- a/wikimeaty/index.html
+++ b/wikimeaty/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FX9X56QC6B"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-FX9X56QC6B');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wiki Meaty - Coming Soon | Join the Waitlist</title>
@@ -690,15 +699,6 @@
             const saved = localStorage.getItem('wikimeaty_lang');
             if (saved && t[saved]) updateLang(saved);
         });
-    </script>
-
-    <!-- Google Analytics - TODO: Replace G-FX9X56QC6B with your measurement ID -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FX9X56QC6B"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-FX9X56QC6B');
     </script>
 </body>
 </html>
