--- a/wikimeaty/index.html
+++ b/wikimeaty/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FX9X56QC6B"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-65726M56XE"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'G-FX9X56QC6B');
+        gtag('config', 'G-65726M56XE');
     </script>
 
     <meta charset="UTF-8">
