--- a/wikimeaty/privacy.html
+++ b/wikimeaty/privacy.html
@@ -13,6 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - Wiki Meaty</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🥩</text></svg>">
     <style>
         * {
             margin: 0;
@@ -130,12 +131,12 @@
 <body>
     <nav>
         <div class="container">
-            <a href="LandingPageForWikiMeat.html" class="logo">🥩 Wiki Meaty</a>
+            <a href="index.html" class="logo">🥩 Wiki Meaty</a>
         </div>
     </nav>
 
     <div class="content">
-        <a href="LandingPageForWikiMeat.html" class="back-btn">← Back to Home</a>
+        <a href="index.html" class="back-btn">← Back to Home</a>
         <h1>Privacy Policy</h1>
         <p class="update-date">Last Updated: January 17, 2026</p>
 
@@ -197,7 +198,7 @@
         <p>If you have any questions about this Privacy Policy, please contact us:</p>
         <ul>
             <li>Email: <a href="mailto:privacy@wikimeaty.com">privacy@wikimeaty.com</a></li>
-            <li>Website: <a href="LandingPageForWikiMeat.html">Wiki Meaty</a></li>
+            <li>Website: <a href="index.html">Wiki Meaty</a></li>
         </ul>
     </div>
 
