Changed the About Me.

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>farifari | Think. Build. Ship.</title>
-  <meta name="description" content="I think of problems, build things and ship them. Follow along as I build in public.">
+  <meta name="description" content="I see a problem, find a solution and ship it. Follow along as I build in public.">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="farifari | Think. Build. Ship.">
-  <meta property="og:description" content="I think of problems, build things and ship them. Follow along as I build in public.">
+  <meta property="og:description" content="I see a problem, find a solution and ship it. Follow along as I build in public.">
   <meta property="og:image" content="https://farifari.com/ProfilePicture.jpeg">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="farifari | Think. Build. Ship.">
-  <meta name="twitter:description" content="I think of problems, build things and ship them. Follow along as I build in public.">
+  <meta name="twitter:description" content="I see a problem, find a solution and ship it. Follow along as I build in public.">
   <meta name="twitter:image" content="https://farifari.com/ProfilePicture.jpeg">
 
   <!-- Favicon -->
@@ -286,7 +286,7 @@
     <div class="about-box animate delay-2">
       <p class="section-label">About Me</p>
       <p>
-        I think of problems, build things and ship them. I'm currently working on <a href="https://farifari.com/wikimeaty/"><strong>Wiki Meaty 🥩</strong></a> and growing my audience online, so follow along.
+        I see a problem, find a solution and ship it. I'm currently working on <a href="https://farifari.com/wikimeaty/"><strong>Wiki Meaty 🥩</strong></a> and growing my audience online, so follow along.
       </p>
     </div>
 
