--- a/wikimeaty/index.html
+++ b/wikimeaty/index.html
@@ -57,6 +57,12 @@
             padding: 2rem 0;
         }
 
+        header .container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
         .logo {
             font-size: 2rem;
             font-weight: 800;
@@ -283,10 +289,7 @@
         }
 
         .lang-switch {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            z-index: 1001;
+            position: relative;
         }
 
         .lang-btn {
@@ -421,25 +424,23 @@
 
         @media (max-width: 768px) {
             .form-flex { flex-direction: column; }
-            .lang-switch { top: 70px; }
         }
     </style>
 </head>
 <body>
     <div class="bg-animation"></div>
 
-    <div class="lang-switch">
-        <button class="lang-btn" onclick="toggleLang()">
-            <span id="flag"><img src="https://flagcdn.com/w40/gb.png" class="lang-flag"></span>
-            <span id="langName">English (UK)</span>
-            <span>▼</span>
-        </button>
-        <div class="lang-dropdown" id="dropdown"></div>
-    </div>
-
     <header>
         <div class="container">
             <div class="logo">🥩 Wiki Meaty</div>
+            <div class="lang-switch">
+                <button class="lang-btn" onclick="toggleLang()">
+                    <span id="flag"><img src="https://flagcdn.com/w40/gb.png" class="lang-flag"></span>
+                    <span id="langName">English (UK)</span>
+                    <span>▼</span>
+                </button>
+                <div class="lang-dropdown" id="dropdown"></div>
+            </div>
         </div>
     </header>
 
