Formspree email confirmation.

--- a/wikimeaty/index.html
+++ b/wikimeaty/index.html
@@ -460,7 +460,7 @@
 
                 <div class="email-form">
                     <form class="form-flex" id="form">
-                        <input type="email" placeholder="Enter your email" required id="email">
+                        <input type="email" id="email" name="email" placeholder="Enter your email" required>
                         <button type="submit" id="joinBtn">Join Waitlist</button>
                     </form>
                     <p class="note" id="note">Get early access and exclusive updates. No spam, ever.</p>
